--- a/WebAppService/Views/Home/Index.cshtml
+++ b/WebAppService/Views/Home/Index.cshtml
@@ -217,7 +217,7 @@
                 <div>
                     <span class="text-head-breadcrumb text-ic-5"><span class="text-primary">Câu chuyện</span> của khách hàng</span>
                 </div>
-                <p class="text-muted mb-4 text-center">
+                <p class="text-muted mb-4 text-center" style="font-size:14px">
                     Khám phá sự khác biệt mà chúng tôi tạo ra thông qua tiếng nói của những người chúng tôi đã phục vụ.
                 </p>
             </div>
