--- a/WebAppService/Areas/Admin/Views/DanhMucHeThong/DanhMucHeThong.cshtml
+++ b/WebAppService/Areas/Admin/Views/DanhMucHeThong/DanhMucHeThong.cshtml
@@ -30,6 +30,8 @@
                         <option value="Danh mục chức danh">Danh mục chức danh</option>
                         <option value="Danh mục nhóm bài viết">Danh mục nhóm bài viết</option>
                         <option value="Danh mục bài đăng">Danh mục bài đăng</option>
+                        <option value="Danh mục nhóm dịch vụ chuyên khoa">Danh mục nhóm dịch vụ chuyên khoa</option>
+                        <option value="Danh mục cơ sở làm việc">Danh mục cơ sở làm việc</option>
                         @if (User.IsInRole("SuperAdmin"))
                         {
                         <option value="capcha"> reCAPTCHA</option>
