--- a/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
+++ b/WebAppService/Areas/Admin/Views/Shared/_MoldunLeftSideBar.cshtml
@@ -116,7 +116,7 @@
                         <span>
                             <iconify-icon icon="solar:pen-new-square-broken" class="text-primary" width="20px" height="20px"></iconify-icon>
                         </span>
-                        <span class="hide-menu">Dịch vụ</span>
+                        <span class="hide-menu">Dịch vụ chuyên khoa</span>
                     </a>
                 </li>
                 <li class="sidebar-item">
@@ -156,7 +156,7 @@
                                 <div class="round-16 d-flex align-items-center justify-content-center">
                                     <i class="ti ti-circle"></i>
                                 </div>
-                                <span class="hide-menu">Danh mục hệ thống</span>
+                                <span class="hide-menu">Cấu hình danh mục</span>
                             </a>
                         </li>
                     @*     <li class="sidebar-item">
