--- a/WebAppService/Areas/Admin/Views/Video/Video.cshtml
+++ b/WebAppService/Areas/Admin/Views/Video/Video.cshtml
@@ -9,7 +9,7 @@
     <script src="~/assets/plug/tinymce/js/tinymce/tinymce.min.js"></script>
     <script src="~/ajax/webappservice.tinymcesetting.js?v=1.2"></script>
     <script> tinymceSettings(['#editor'], 200); </script>
-    <script src="~/ajax/webappclient.video.js"></script>
+    <script src="~/ajax/webappservice.video.js"></script>
 }
 
 <div class="card-header mt-2">
@@ -107,6 +107,7 @@
                                             <div class="col-sm-12 mb-2">
                                                 <label class="form-label">Tải video:</label>
                                                 <input class="form-control" type="file" id="duong_dan_video">
+                                                <div id="ten_file_video" style="margin-left:10px;"></div>
                                                 <input type="text" id="isThayDoi2" hidden />
                                             </div>
                                             <div class="mb-2 row">
