--- a/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
+++ b/WebAppService/Areas/Admin/Views/DichVu/DichVu.cshtml
@@ -28,10 +28,10 @@
                     </div>
                 </div>
                 <div class="card-body p-2">
-                    <table id="tableDichVu" 
-                           data-toggle="table" 
-                           data-flat="true" 
-                           data-search="true" 
+                    <table id="tableDichVu"
+                           data-toggle="table"
+                           data-flat="true"
+                           data-search="true"
                            data-pagination="true"
                            data-page-size="10"
                            data-page-list="[5, 10, 15, all]" data-url="">
@@ -42,7 +42,8 @@
                                 <th data-field="urlImage" data-width="8" data-formatter="fm_Image" data-sortable="true">Ảnh</th>
                                 <th data-field="tieuDeBaiViet" data-sortable="true">Tên tiêu đề</th>
                                 <th data-field="moTaNgan" data-sortable="true">Mô tả ngắn</th>
-                                @* <th data-field="isBaiVietNoiBat" data-width="8" data-formatter="fm_editBVNB" data-sortable="true">Nổi bật</th> *@
+                                <th data-field="cbLoaiBaiDang" data-sortable="true" data-width="8">Phân loại dịch vụ</th>
+                                <th data-field="cbNhomBaiViet" data-sortable="true">Nhóm dịch vụ</th>
                                 <th data-field="isCongKhai" data-width="8" data-formatter="fm_editBVCK" data-sortable="true">Công khai</th>
                             </tr>
                         </thead>
@@ -90,17 +91,29 @@
                                                 <label class="fs-2 form-label m-0">Tên tiêu đề:<font class="text-danger">*</font> </label>
                                                 <input type="text" class="form-control" placeholder="Nhập tiêu đề ..." id="TieuDeBaiViet" value="">
                                             </div>
-                                            <div class="col-sm-6 mb-2" hidden>
-                                                <label class="form-label">Nhóm bài viết:</label>
-                                                <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="CbNhomBaiViet" tabindex="2">
-                                                    <option value="">--Chọn nhóm bài viết--</option>
+                                            <div class="col-sm-6 mb-2">
+                                                <label class="form-label">Nhóm dịch vụ chuyên khoa:<font class="text-danger">*</font></label>
+                                                <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="CbNhomBaiViet1" tabindex="2">
+                                                    <option value="">--Chọn nếu là nhóm bài viết--</option>
+                                                </select>
+                                            </div>
+                                            <div class="col-sm-6 mb-2">
+                                                <label class="form-label">Nhóm dịch vụ đặc biệt:<font class="text-danger">*</font></label>
+                                                <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="CbNhomBaiViet2" tabindex="2">
+                                                    <option value="">--Chọn nếu là nhóm bài viết--</option>
                                                 </select>
                                             </div>
                                             <div class="col-sm-6 mb-2" hidden>
                                                 <label class="form-label">Loại danh mục:</label>
-                                                <select data-placeholder="Choose a Country..." class="form-control chosen-select" id="CbLoaiBaiDang" tabindex="2">
-                                                    <option value="">--Chọn danh mục--</option>
-                                                </select>
+                                                <input type="type" name="name" value="" id="CbLoaiBaiDang" />
+                                            </div>
+                                            <div class="col-sm-12 mb-2">
+                                                <div class="alert customize-alert alert-dismissible border-primary text-info fade show p-1" role="alert">
+                                                    <div class="d-flex align-items-center  me-3 me-md-0">
+                                                        <i class="ti ti-info-circle fs-5 me-2 text-info"></i>
+                                                        Chọn 1 trong 2 nhóm dịch vụ bên dưới để phân loại bài viết của bạn.
+                                                    </div>
+                                                </div>
                                             </div>
                                             <div class="col-sm-12 mb-2" hidden>
                                                 <label class="form-label">Tiêu đề loại danh mục(nếu có):</label>
@@ -108,7 +121,7 @@
                                             </div>
                                             <div class="col-sm-12 mb-2">
                                                 <label class="fs-2 form-label m-0">Mô tả:</label>
-                                                <textarea type="text" class="form-control" placeholder="Mô tả ..." rows="10" id="MoTaNgan" value=""></textarea>
+                                                <textarea type="text" class="form-control" placeholder="Mô tả ..." rows="3" id="MoTaNgan" value=""></textarea>
                                             </div>
                                             <div class="mb-2 row">
                                                 <div class=" col-sm-3" hidden>
