--- a/WebAppService/Views/FAQ/Index.cshtml
+++ b/WebAppService/Views/FAQ/Index.cshtml
@@ -63,7 +63,7 @@
                                 </div>
 
                                 <div class="form-group mt-2 col-md-12 hide-on-mobile">
-                                    <div class="g-recaptcha" data-sitekey="@ViewBag.ReCaptchaKey"></div>
+                                    <div id="recaptcha-pc"></div>
                                 </div>
                                 <div class="form-group col-md-6 hide-on-mobile" style="margin-top:30px">
                                     <a href="#" onclick="CheckBeforeSend()" class="btn main-menu border-radius-5 d-lg-inline btn-orrange py-2 w-100" style=" padding: 0px 67px;font-weight: 700;font-family: 'Montserrat'">Gửi</a>
@@ -83,7 +83,7 @@
                             <a href="#" onclick="SendForm()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
                         </div>-->
                         <div class="form-group col-md-12 p-0  d-block d-md-none">
-                            <div class="g-recaptcha" data-sitekey="@ViewBag.ReCaptchaKey"></div>
+                            <div id="recaptcha-mobile"></div>
                         </div>
                         <div class="form-group col-md-12 p-0  d-block d-md-none">
                             <a href="#" onclick="CheckBeforeSend()" class="btn main-menu btn-orrange w-100" style="padding:20px">Gửi</a>
