--- a/WebAppService/wwwroot/web/assets/css/mobile.css
+++ b/WebAppService/wwwroot/web/assets/css/mobile.css
@@ -105,3 +105,8 @@
         line-height: 60px;
     }
 }
+@media (min-width: 992px) {
+    #navigation {
+        display: none !important;
+    }
+}
