--- a/WebAppService/wwwroot/web/assets/css/doctor.css
+++ b/WebAppService/wwwroot/web/assets/css/doctor.css
@@ -35,20 +35,23 @@
 }
 
 .nice-select {
-    -webkit-tap-highlight-color: transparent;
-    background-color: #ffffff;
-    border: none;
-    clear: both;
+    width: 100%;         /* hoặc một giá trị hợp lý như 180px */
+    max-width: 200px;    /* đảm bảo không kéo form */
     height: 57px;
-    line-height: 55px;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    /* user-select: none; */
+    line-height: 54px;
+    font-size: 14px;
+    font-family: 'Inter', sans-serif;
+    background-color: #fff;
+    color: #6E6E6E;
+    cursor: pointer;
+}
+
+.nice-select .current {
+    display: block;
+    max-width: 100%;
     white-space: nowrap;
-    width: auto;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .nice-select {
@@ -58,6 +61,8 @@
     cursor: pointer;
     font-size: 14px;
     height: 57px;
+    width: 100px !important;
+    text-overflow: ellipsis;
     line-height: 54px;
     white-space: nowrap;
     font-family: 'Inter', sans-serif;
